# latex2markdown

./: README.md  pyproject.toml
latex2markdown/: latex2markdown.py
